# editor

./: -  .dockerignore  .gitignore  2stave.musicxml  ACCIDENTAL_SIZE_ADJUSTMENT.md  API_INTEGRATION.md  ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_DIAGRAMS.md  ARCS_EXTENSION_ADJUSTMENT.md  ARROW_KEY_NAVIGATION_ANALYSIS.md  ARROW_KEY_NAVIGATION_FIXES.md  AUDIT_FINDINGS.md  AUTOSAVE_AND_STORAGE_COMPLETE.md  BEAT_LOOPS_BEZIER_REFACTOR.md  BEAT_LOOPS_SHALLOW_ADJUSTMENT.md  BRAVURA_FIX_REPORT.md  BREATH_MARK_IMPLEMENTATION.md  BUILD_OPTIMIZATION_GUIDE.md  CLAUDE.md  CODEBASE_EXPLORATION.md  CODEBASE_EXPLORATION_SUMMARY.md  CODEBASE_UPDATE_SUMMARY.md  CODE_REVIEW_TASKS.md  CONSTRAINT_SYSTEM_SUMMARY.md  CONVERSATION_CHECKPOINT.md  COORDINATOR_EXTRACTION_ANALYSIS.md  COORDINATOR_INDEX.md  COORDINATOR_METHOD_BREAKDOWN.md  COORDINATOR_SUMMARY.txt  COORDINATOR_VISUAL_MAP.txt  CORS_FIX.md  CURSOR_POSITIONING_FIX.md  CURSOR_REFACTORING_FINAL.md  CURSOR_REFACTORING_PROGRESS.md  Cargo.toml  Cargo.toml.example  DATA_HANDLING_VERIFICATION.md  DEPENDENCIES.md  DOCKER_TESTING.md  DOM_REFACTORING_SUMMARY.md  (+233 more)
.cargo/: config.toml
.claude/: constitution.md
.specify/memory/: constitution.md
docs/: FONTSPEC_ARCHITECTURE.md  FONTSPEC_RUST_MIGRATION_MVP.md  FONTSPEC_RUST_MIGRATION_PLAN.md  FONT_ARCHITECTURE_REVIEW.md  FONT_ARCHITECTURE_RISK_ANALYSIS.md  HANDWRITING_RECOGNITION_PLAN.md  LAYERED_ARCHITECTURE_PROPOSAL.md  MARKUP_SPECIFICATION.md  REFACTORING_CORE_API.md  composer-field.md  lyrics-rendering.md  musicxml-import-plan.md  phase2-summary.md  phase3-summary.md  phase3-wasmbridge-conversion.md  typescript-patterns.md
docs/reference/: IR_TO_MIDI_ANALYSIS.md
key-signatures/: getKeySigs.fish
lilypond-service/: .dockerignore  ARCHITECTURE.md  Dockerfile  INTEGRATION.md  QUICKSTART.md  README.md  SETUP-ARCHLINUX.md  SUMMARY.txt  docker-compose.yaml  package-lock.json  package.json  server.js  setup-archlinux.sh
scripts/: auto_setup_ramdisk.sh  restore-ramdisk.sh  run-tests-docker.sh  setup-ramdisk.sh  verify-dependencies.sh
scripts/fonts/: generate.py  generate_noto.py
server/: Dockerfile  index.js  package-lock.json  package.json
specs/001-poc/: data-model.md  line-grammar.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  unocss-recommendations.md
specs/002-real-time-staff/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-implement-ornaments-grace/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-music-notation-ornament/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: api.rs  beat_groups.rs  lib.rs  lilypond_renderer.rs
src/api/: cells.rs  core.rs  export.rs  helpers.rs  layered.rs  layered_tala.rs  mod.rs  patch.rs  position.rs  render.rs  textarea.rs  types.rs
src/converters/: ir_to_document.rs  mod.rs
src/css/: constraints-dialog.css  gutter.css  key-signature-selector.css  new-document-dialog.css  textarea-notation.css
src/diagnostics/: mod.rs  slurs.rs
src/fontgen/: fontspec.json
src/html_layout/: cell.rs  curves.rs  display_list.rs  document.rs  line.rs  lyrics.rs  mod.rs
src/ir/: builder.rs  clef.rs  measurization.rs  mod.rs  types.rs
src/js/: ConstraintsDialog.js  ConstraintsDialog.ts  NewDocumentDialog.js  NewDocumentDialog.ts  README.md  REFACTORING_SUMMARY.md  debug.js  (+75 more)
static/: textarea-poc.html
tests/: breath_mark_rest_test.rs  empty_measure_boundary_test.rs  lyrics_musicxml_export_test.rs  lyrics_test.js  lyrics_test.rs  measurization_test.rs  midi_test.rs  ornament_ir_unit_test.rs  ornament_musicxml_test.rs  sargam_glyph_mapping_test.rs  test_return_key_manual.py  title_test.rs  triplet_slur_ir_test.rs  triplet_slur_test.rs  utils.py  wasm_build.rs
(+670 files in other folders)
