[package]
name = "editor-wasm"
version = "0.1.0"
edition = "2021"
description = "Music Notation Editor WASM module with Cell architecture"
license = "MIT"
repository = "https://github.com/rothfield/editor"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9"
serde-wasm-bindgen = "0.6.5"
serde_repr = "0.1"
js-sys = "0.3.69"
web-sys = { version = "0.3.69", features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Window",
  "Performance",
] }
console_error_panic_hook = { version = "0.1.7", optional = true }
console_log = { version = "1.0.0", optional = true }
log = "0.4.21"
chrono = { version = "0.4.38", features = ["wasmbind", "js-sys"], optional = true }
regex = { version = "1.10.4", optional = true }
getrandom = { version = "0.2.14", features = ["js"] }
uuid = { version = "1.8.0", features = ["v4", "js"], optional = true }
lazy_static = "1.4"
once_cell = "1.19"
wasm-bindgen-test = "0.3.42"
roxmltree = "0.19"
quick-xml = { version = "0.31", features = ["serialize"] }
midly = "0.5"
num-rational = "0.4"
thiserror = "1.0"
mustache = "0.9"

[build-dependencies]
serde_yaml = "0.9"
serde_json = "1.0.114"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
# Size optimization with some speed (WASM size matters for web)
opt-level = "s"
# Link-time optimization for smaller, faster WASM
lto = "thin"  # Changed from true to "thin" for faster compile times
debug = false
panic = "abort"
# Use 16 codegen units for faster compilation (slower runtime, but faster compile)
# Can reduce to 1 for final release if needed
codegen-units = 16
strip = true

[profile.dev]
opt-level = 0
debug = true
panic = "abort"
# Maximum parallelism for dev builds
codegen-units = 256

# Optimization for incremental builds
[profile.dev.package."*"]
opt-level = 0
codegen-units = 256

# Fast build profile - use this with: cargo build --profile=fast-build
[profile.fast-build]
inherits = "release"
opt-level = 1
lto = false
codegen-units = 256
strip = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = ["console_error_panic_hook", "console_log"]
regex = ["dep:regex"]
chrono = ["dep:chrono"]
uuid = ["dep:uuid"]